--- a/src/scenes/Footer.module.css
+++ b/src/scenes/Footer.module.css
@@ -9,7 +9,7 @@
   justify-content: center;
 }
 
-p {
+.footer > p {
   color: white;
 }
 
